Fix minicard spacing issue

--- a/src/css/mini-cards.css
+++ b/src/css/mini-cards.css
@@ -5,19 +5,25 @@
 }
 
 .flashcard-box {
+  display: flex;
+  flex-direction: column;
+  min-height: 240px;
   border: 1px solid black;
   background-color: white;
-  max-width: auto;
 }
 
 .flashcard-box__heading {
   margin-left: 1rem;
   color: var(--clr-neutral-900);
   font-size: 20px;
+  margin: 1rem 1rem 0 1rem;
 }
 
 .flashcard-box-inner {
-  padding: 1rem 1rem 0 1rem;
+  padding: 0 1rem 0 1rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .flashcard-box-inner span {
@@ -33,6 +39,7 @@
   display: flex;
   gap: 1rem;
   justify-content: space-between;
+  margin-top: auto;
 }
 
 .btn-menu {
